# ductr

./: Cargo.toml  readme.md
src/: image.rs  io.rs  lib.rs  manipulation.rs  netpbm.rs
src/image/: io.rs  manipulation.rs
src/netpbm/: io.rs  manipulation.rs
tests/: unit_testing.rs
tests/images/: add_filter.pnm  blue.ppm  cat_binary.ppm  cat_inverted.pnm  green.ppm  make_greyscale.pnm  make_pbm_ascii.pbm  make_pbm_binary.pbm  make_pgm_ascii.pgm  make_pgm_binary.pgm  make_ppm_ascii.ppm  make_ppm_binary.ppm  read_file_binary.pnm  red.ppm
